--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -63,6 +65,7 @@ body {
   line-height: 1.6;
   overflow-x: hidden;
   width: 100%;
+  position: relative;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
